tests/invalid/coroutine_in_class.prsm
// E060: Coroutine declarations are only valid inside component declarations
class UtilityClass {
    coroutine flash() {
        wait 0.5s
    }
}
